{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 36,
  "lineage": "272f0b11-9587-07c8-ed1e-89df23218a98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08abb1ddf95a94899",
            "arn": "arn:aws:ec2:us-west-2:891376936920:instance/i-01b18bba3bba01bda",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b18bba3bba01bda",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3519ea450fe8306",
            "private_dns": "ip-10-0-0-139.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.139",
            "public_ip": "35.92.115.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fd0bac87ed96b333",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0197e3bf843283c07",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-ec2",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-ec2",
              "Project": "06-resources"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d004b7126ac6dc48"
            ]
          },
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376936920:internet-gateway/igw-0a63aff20fe5fd495",
            "id": "igw-0a63aff20fe5fd495",
            "owner_id": "891376936920",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "vpc_id": "vpc-0df1caacf088a0e6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376936920:route-table/rtb-06cf8c19bd8ad6911",
            "id": "rtb-06cf8c19bd8ad6911",
            "owner_id": "891376936920",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a63aff20fe5fd495",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-main",
              "Project": "06-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df1caacf088a0e6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f5df9bb6d3a0d2e",
            "route_table_id": "rtb-06cf8c19bd8ad6911",
            "subnet_id": "subnet-0197e3bf843283c07"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_http_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376936920:security-group/sg-0d004b7126ac6dc48",
            "description": "Allow HTTP inbound traffic on ports 443 and 80",
            "egress": [],
            "id": "sg-0d004b7126ac6dc48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_http_traffic",
            "name_prefix": "",
            "owner_id": "891376936920",
            "revoke_rules_on_delete": false,
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-sg",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-sg",
              "Project": "06-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df1caacf088a0e6b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376936920:subnet/subnet-0197e3bf843283c07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0197e3bf843283c07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376936920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-public",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-public",
              "Project": "06-resources"
            },
            "vpc_id": "vpc-0df1caacf088a0e6b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376936920:vpc/vpc-0df1caacf088a0e6b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a1bdab85391f114",
            "default_route_table_id": "rtb-09632b56e56d813d6",
            "default_security_group_id": "sg-028b21fa4c012646b",
            "dhcp_options_id": "dopt-034fef456518b1794",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df1caacf088a0e6b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09632b56e56d813d6",
            "owner_id": "891376936920",
            "tags": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-vpc",
              "Project": "06-resources"
            },
            "tags_all": {
              "CostCenter": "1234",
              "ManagedBy": "Terraform",
              "Name": "06-resources-vpc",
              "Project": "06-resources"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376936920:security-group-rule/sgr-0eb9236a6525538cd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0eb9236a6525538cd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d004b7126ac6dc48",
            "security_group_rule_id": "sgr-0eb9236a6525538cd",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:891376936920:security-group-rule/sgr-04bb951cea432648c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-04bb951cea432648c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d004b7126ac6dc48",
            "security_group_rule_id": "sgr-04bb951cea432648c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_http_traffic",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}